hphp/test/slow/dynamic_methods/strings_with_colons.php.expectf
string(1) "X"
string(1) "X"
string(1) "X"
string(1) "X"
----
string(1) "X"
string(1) "X"
string(1) "Y"
string(1) "Y"
----
string(1) "X"
string(1) "X"
string(1) "Y"
string(1) "Y"
----
string(1) "X"
string(1) "X"
string(1) "Y"
string(1) "Y"
====

Fatal error: Call to undefined function W::non() in %s/test/slow/dynamic_methods/strings_with_colons.php on line 18
